Bug 183646  ::-moz-selection does not work in form controls (input[type=text], input[type=password], textarea) r=dbaron